force-app/main/default/objects/ObjectPermission__mdt/ObjectPermission__mdt.object-meta.xml
<CustomObject>
    <label>Object Permission</label>
    <pluralLabel>Object Permissions</pluralLabel>
</CustomObject>