force-app/main/default/objects/ObjectPermission__mdt/fields/DoNotDelete__c.field-meta.xml
<CustomField>
    <fullName>DoNotDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Delete</label>
    <type>Checkbox</type>
</CustomField>