force-app/main/default/objects/ObjectPermission__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>Object__mdt</referenceTo>
    <relationshipLabel>Object Permissions</relationshipLabel>
    <relationshipName>Object_Permissions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>