force-app/main/default/objects/ObjectPermission__mdt/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <referenceTo>Profile__mdt</referenceTo>
    <relationshipLabel>Object Permissions</relationshipLabel>
    <relationshipName>Object_Permissions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>