force-app/main/default/objects/ObjectPermission__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Profile__c</columns>
    <columns>Object__c</columns>
    <columns>DoNotDelete__c</columns>
    <filterScope>Everything</filterScope>
    <label>Permissions</label>
</ListView>